--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cl_cv_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="2dp"
     android:clickable="true"
     android:foreground="?selectableItemBackground"
-    app:cardBackgroundColor="@color/cast_intro_overlay_button_background_color"
-    app:cardCornerRadius="15dp"
-    app:cardElevation="3dp"
-    app:contentPadding="5dp">
+
+    app:cardCornerRadius="2dp"
+    app:cardElevation="3dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="200dp">
 
         <ImageView
             android:id="@+id/cl_im_photo"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@color/cardview_dark_background" />
+            android:layout_height="match_parent" />
 
-        <TextView
-            android:id="@+id/cl_tv_name"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/cl_im_photo"
-            android:layout_marginTop="20dp"
-            android:text="haha"
-            android:textSize="30sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/cl_im_photo"
+            android:background="@drawable/gradient">
+
+            <TextView
+                android:id="@+id/cl_tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="text"
+                android:textColor="#ffffff"
+                android:textSize="30sp" />
+        </LinearLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
