--- a/app/src/main/res/layout/activity_places.xml
+++ b/app/src/main/res/layout/activity_places.xml
@@ -8,13 +8,21 @@
         android:id="@+id/toolbar2"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"/>
+        android:background="@color/colorPrimary"
+        android:theme="@style/ToolbarColoredBackArrow"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ap_rv_recycler"
-        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar2" />
+        android:layout_below="@id/toolbar2"
+        android:background="@color/colorPrimary"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:background="@drawable/toolbar_shadow"
+        android:layout_below="@id/toolbar2"
+        />
 
 </RelativeLayout>
