--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#424242</color>
+    <color name="colorBackground">#757575</color>
     <color name="colorPrimaryDark">#212121</color>
     <color name="colorAccent">#b71c1c</color>
+    <color name="secondaryToolbar">#FAFAFA</color>
     <color name="colorTransparent">#00000000</color>
 </resources>
