--- a/app/src/main/res/layout/window_layout.xml
+++ b/app/src/main/res/layout/window_layout.xml
@@ -10,6 +10,7 @@
         android:layout_height="100dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@mipmap/ic_launcher" />
 
     <TextView
@@ -17,11 +18,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="title"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
         android:textSize="20sp"
         android:layout_alignTop="@+id/wl_iv_image"
         android:layout_toRightOf="@+id/wl_iv_image"
-        android:layout_toEndOf="@+id/wl_iv_image" />
+        android:layout_toEndOf="@+id/wl_iv_image"
+        android:layout_marginStart="14dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
