--- a/app/src/main/res/layout/routelist_element.xml
+++ b/app/src/main/res/layout/routelist_element.xml
@@ -12,6 +12,7 @@
         android:layout_marginLeft="6dp"
         android:layout_marginTop="6dp"
         android:text="tata"
+        android:textColor="@android:color/white"
         android:textSize="20sp" />
 
     <LinearLayout
@@ -23,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/ic_route"
+            android:textColor="@android:color/white"
             android:textSize="50sp" />
 
         <TextView
@@ -32,6 +34,7 @@
             android:layout_marginLeft="6dp"
             android:layout_marginTop="6dp"
             android:text="4"
+            android:textColor="@android:color/white"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -44,6 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/ic_time"
+            android:textColor="@android:color/white"
             android:textSize="50sp" />
 
         <TextView
@@ -53,6 +57,7 @@
             android:layout_marginLeft="6dp"
             android:layout_marginTop="6dp"
             android:text="20 min"
+            android:textColor="@android:color/white"
             android:textSize="20sp" />
     </LinearLayout>
 </LinearLayout>
