--- a/app/src/main/res/layout/window_layout.xml
+++ b/app/src/main/res/layout/window_layout.xml
@@ -8,49 +8,28 @@
         android:id="@+id/wl_iv_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@mipmap/ic_launcher" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:id="@+id/wl_tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="title"
-        android:layout_marginLeft="20dp"
-        android:textSize="20sp"
         android:layout_alignTop="@+id/wl_iv_image"
-        android:layout_toRightOf="@+id/wl_iv_image"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="14dp"
         android:layout_toEndOf="@+id/wl_iv_image"
-        android:layout_marginStart="14dp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/wl_iv_image"
         android:layout_toRightOf="@+id/wl_iv_image"
-        android:layout_toEndOf="@+id/wl_iv_image"
-        android:layout_marginBottom="10dp">
+        android:text="title"
+        android:textColor="@android:color/black"
+        android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/wl_iv_show_details"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/ic_details"
-            android:textSize="50sp" />
-
-
-        <TextView
-            android:id="@+id/wl_iv_make_route"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/ic_route"
-            android:textSize="50sp" />
-    </LinearLayout>
+   <Button
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="SZCZEGÓLY"
+       android:layout_alignBottom="@+id/wl_iv_image"
+       android:layout_alignLeft="@+id/wl_tv_name"
+       android:layout_alignStart="@+id/wl_tv_name" />
 </RelativeLayout>
