IMPLEMENTATION: Add own routes module. User can delete, add points to route. Add dialog to save name and description of route. Make enum with types of routes.

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -10,6 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <Button
+        android:id="@+id/am_btn_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ZAPISZ TRASĘ"
+        android:visibility="gone"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/am_rv_recycler"
         android:layout_width="300dp"
