--- a/app/src/main/res/layout/window_layout.xml
+++ b/app/src/main/res/layout/window_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
     <ImageView
         android:id="@+id/wl_iv_image"
@@ -10,7 +10,7 @@
         android:layout_height="100dp"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"/>
 
     <TextView
         android:id="@+id/wl_tv_name"
@@ -23,13 +23,26 @@
         android:layout_toRightOf="@+id/wl_iv_image"
         android:text="title"
         android:textColor="@android:color/black"
-        android:textSize="20sp" />
+        android:textSize="20sp"/>
 
-   <Button
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:text="SZCZEGÓLY"
-       android:layout_alignBottom="@+id/wl_iv_image"
-       android:layout_alignLeft="@+id/wl_tv_name"
-       android:layout_alignStart="@+id/wl_tv_name" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/wl_iv_image"
+        android:layout_alignLeft="@+id/wl_tv_name"
+        android:layout_alignStart="@+id/wl_tv_name"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SZCZEGÓLY"/>
+
+        <Button
+            android:id="@+id/wl_btn_longClick"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Długo kliknij by stworzyć trasę"
+            android:visibility="gone"/>
+    </LinearLayout>
 </RelativeLayout>
