--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -4,11 +4,8 @@
 
     <item
         android:id="@+id/add"
-        android:title="Zabytki" />
+        android:title="Dodaj do trasy" />
     <item
         android:id="@+id/delete"
-        android:title="Restauracje" />
-    <item
-        android:id="@+id/via"
-        android:title="Wszystkie" />
+        android:title="Usuń z trasy" />
 </menu>
