--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,9 +7,11 @@
         android:icon="@drawable/ic_sort">
         <menu>
             <item android:id="@+id/visit"
-                android:title="Zabytki" />
+                android:title="Zwiedzanie" />
             <item android:id="@+id/eat"
-                android:title="Restauracje" />
+                android:title="Gastronomia" />
+            <item android:id="@+id/hotel"
+                  android:title="Nocleg" />
             <item android:id="@+id/all"
                 android:title="Wszystkie" />
         </menu>
