--- a/app/src/main/res/layout/fragment_save.xml
+++ b/app/src/main/res/layout/fragment_save.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:hint="Nazwa trasy" />
+        android:hint="@string/route_name" />
 
     <EditText
         android:id="@+id/fs_et_description"
@@ -22,7 +22,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:hint="Opis trasy" />
+        android:hint="@string/route_description" />
 
     <Spinner
         android:id="@+id/fs_sp_types"
@@ -38,13 +38,13 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ANULUJ" />
+            android:text="@string/cancel" />
 
         <Button
             android:layout_weight="1"
             android:id="@+id/dialog_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ZAPISZ" />
+            android:text="@string/save" />
     </LinearLayout>
 </LinearLayout>
