--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/add"
-        android:title="Dodaj do trasy" />
+        android:title="@string/add_to_route" />
     <item
         android:id="@+id/delete"
-        android:title="Usuń z trasy" />
+        android:title="@string/delete_from_route" />
 </menu>
